tests/fixtures/invalid/restrict_scalar_aggregate_field.c
struct Bad {
    restrict int value;
};

int main(void) {
    struct Bad bad = {1};
    return bad.value;
}
